# model

./: .buildinfo  .gitignore  AGENT_INSTRUCTIONS.md  CHANGELOG.rst  GEMINI.md  LICENSE  README.rst  ROADMAP.md  STANDARDS.md  about.html  changelog.html  connect.html  contribute.html  docstring_report.txt  genindex.html  get_stat.py  glossary.html  index.html  intro.html  objects.inv  polynumbers.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  test_serialization.py  todos.html
.clerk/: geometor-model_docs.md  geometor-model_src.md  geometor-model_tree.txt  instructions.md  mission_prompt.md  src.md  tree.txt
.doctrees/: about.doctree  changelog.doctree  connect.doctree  contribute.doctree  environment.pickle  glossary.doctree  index.doctree  intro.doctree  todos.doctree
_modules/: index.html  model.html
_sources/: about.rst.txt  changelog.rst.txt  connect.rst.txt  contribute.rst.txt  discuss.rst.txt  index.rst.txt  intro.rst.txt
_static/: custom.css
about/: index.html
changelog/: index.html
connect/: index.html
contribute/: index.html
demos/: arbitrary_points.py  circle-square.py  delete_bug_repro.py  demo.html  dot_graph.py  geometor_model.dot  heptadecagon.html  heptadecagon.py  heptadecagon2.py  index.html  inverse.html  inverse2.py  kepler.py  mpl_test.py  vesica.html  vesica.json  vesica.py  wedge.py
discuss/: index.html
docsrc/: conf.py  glossary.rst  index.rst  todos.rst
genindex/: index.html
glossary/: index.html
intro/: index.html
log/: atom.xml  index.html
logs/: index.html
mission/: index.html
modules/: index.html
overview/: index.html
py-modindex/: index.html
refs/: index.html  matplotlib.html  sympy.html  textualize.html
search/: index.html
tests/: test_polynomial_serialization.py  test_polynomials.py  test_serialization.py  test_vesica.py
todo/: 1_advanced_geometric_operations.md  2_improved_documentation.md  3_event_system.md  4_polynomial_serialization.md  docs_standards.md  refactor_plan.md
todos/: index.html
types/: log.html
usage/: cli.html  getting_started.html  index.html  installation.html
(+413 files in other folders)
