[project]
name = "geometor-model"
dynamic = ["version"]
authors = [
  { name="phi ARCHITECT", email="github@phiarchitect.com" },
]
description = "create and manage log entries for a python project"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sympy",
    "textual",
    "rich",
    "jinja2",
    "numpy",
]

[project.scripts]
model = "geometor.model.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["geometor"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "geometor.model.__version__"}

[project.urls]
"Website" = "https://geometor.github.io/model"
"Repository" = "https://github.com/geometor/model"
"Issues" = "https://github.com/geometor/model/issues"
