[project]
name = "geometor-model"
dynamic = ["version"]
authors = [
  { name="geometor", email="github@geometor.com" },
]
description = "A symbolic engine for defining and verifying geometric constructions."
readme = "README.rst"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sympy",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "matplotlib",
]

[project.scripts]
model = "geometor.model.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["geometor"]
namespaces = true

[tool.setuptools.dynamic]
version = {attr = "geometor.model.__version__"}

[project.urls]
"Website" = "https://geometor.github.io/model"
"Repository" = "https://github.com/geometor/model"
"Issues" = "https://github.com/geometor/model/issues"
